--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
+# Core packages
 pandas>=1.3.0
-sqlite3
-requests
-beautifulsoup4
-lxml
+requests>=2.28.0
+beautifulsoup4>=4.11.0
+lxml>=4.9.0
+
+# Date handling
+python-dateutil>=2.8.2
+
+# Database (sqlite3 is included with Python)
+# sqlite3 is part of Python standard library
+
+# Optional but useful
+openpyxl>=3.0.10  # For Excel file support with pandas
+matplotlib>=3.5.0  # For data visualization
+seaborn>=0.12.0   # For better visualizations
