Add SQL queries for analyzing film adaptations and utility scripts for database management
- Created a new SQL file with various queries to analyze films adapted from source texts, including finding adaptations, counting adaptations, and identifying orphaned sources.
- Implemented a Python script for checking the status of the database, including table existence, data completeness, and controlled vocabulary status.
- Developed a utility script for exporting and importing database tables to and from CSV files, facilitating version control and data management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Database files
 *.db
 *.sqlite
+# But track the initial research database
+!data/databases/holreg_research.db
 
 # Backup files
 *.bak
@@ -31,3 +33,6 @@ Thumbs.db
 # Temporary files
 *.tmp
 ~*
+
+# Large data files (if your DB grows)
+*.db.large
